# Study

./: README.md  docker-compose.devcontainer.yml  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json
2年後フォローアップ研修用サンプルコード/.devcontainer/: devcontainer.json
Atcoder課題/AtcCoder Beginners Selection/: Card Game for Two.py  Kagami Mochi.py  Placing Marbles.py  Product.py  Welcome to AtCoder.py
Atcoder課題/Contest 377/: A-Rearranging ABC.py  E-Permute K times 2.py  G-Edit to Match.py
DockerxKubernetes/: wordpress-deployment.yml
NeoTechNighg_SampleCode/: test_greet.py
NeoTechNight_SampleCode/: greet.py  test_greet.py
ProjectB/: Devcontainerドメイン.md  Devcontainerドメイン.txt  Dockerfile  devcontainer.image.json(bk)  devcontainer.json(bkk)  docker-compose.md  docker-compose.yml  python 差分.txt  requirements.txt  ドメイン役割分析.md
ProjectB/.devcontainer/: devcontainer.json
python_RAP_tools/: pdf_to_png.py
月次定例課題/10月/: A.py  B.py  C.py
月次定例課題/11月/: A.py  B.py  C.py
月次定例課題/12月/: A.py  B.py  C.py
月次定例課題/7月/: A.py  B.py  C.py
月次定例課題/8月/: A.py  B.py  C.py
月次定例課題/9月/: A.py  B.py  C.py  C1.py
検証・調査系/Linterメッセージ問題/: GitHub Copilot 問題パネル連携.md
検証・調査系/projectC-uv/: README.md  pyproject.toml
検証・調査系/projectC-uv/.devcontainer/: Dockerfile  devcontainer.json
検証・調査系/projectC-uv/src/: main.py
自己啓発/DockerxKubernetes/: mysql-deployment.yml  mysql-service.yml  wordpress-service.yml
自己啓発/Python関連/: selfとは.py  アスタリスク、args、kwargs.md
自己啓発/競プロ典型90問/: CP Classes.py  Cross Sum.py  Cubic Cake.py  Encyclopedia of Parentheses.py  Score Sum Queries.py  Select 5.py  (+1 more)
(+28 files in other folders)
